Update TOP1 @SanjayBarad

--- a/company.html
+++ b/company.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Gordon Estate</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <link rel="stylesheet" type="text/css" href="css/responsive-tabs.css">
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="images/favicon.png">
 </head>
+
 <body>
-    <div class="loader-wrapper"><div class="loader"></div></div>
+    <div class="loader-wrapper">
+        <div class="loader"></div>
+    </div>
     <main class="main">
         <header class="site_header inner_page_header">
             <div class="custom_container">
@@ -140,8 +145,8 @@
                                     まだ歴史と呼べるものもない会社ではありますが、『私たちにしかできない事がある』と強い信念を持ち、
                                     決して妥協をせず、これからも、さらに多くの皆様と共にドラマを築けるよう精進してまいります。</p>
                                 <div class="organization-detail io fade upS">
-                                    <p>株式会社ゴードンエステイト<br/>
-                                        代表取締役 <img src="images/author-name.png"/></p>
+                                    <p>株式会社ゴードンエステイト<br />
+                                        代表取締役 <img src="images/author-name.png" /></p>
                                 </div>
                             </div>
                         </div>
@@ -255,10 +260,12 @@
         </footer>
     </main>
     <script src="js/jquery.min.js"></script>
-    <script src="js/fonts-awesome-5.js"></script>
-    <script src="js/intersection-observer-polyfill.js"></script>
-    <script src="js/responsiveTabs.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/custom.js"></script>
+	<script src="js/fonts-awesome-5.js"></script>
+	<script src="js/intersection-observer-polyfill.js"></script>
+	<script src="js/responsiveTabs.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/custom.js"></script>
 </body>
+
 </html>
