--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Gordon Estate</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <link rel="stylesheet" type="text/css" href="css/responsive-tabs.css">
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="images/favicon.png">
 </head>
+
 <body>
-    <div class="loader-wrapper"><div class="loader"></div></div>
+    <div class="loader-wrapper">
+        <div class="loader"></div>
+    </div>
     <main class="main">
         <header class="site_header inner_page_header">
             <div class="custom_container">
@@ -75,7 +80,8 @@
                         <div class="address_selection">
                             <span>〒</span>
                             <input type="text" name="">
-                            <select name="" required class="holder_col" onchange="this.className=this.options[this.selectedIndex].className">
+                            <select name="" required class="holder_col"
+                                onchange="this.className=this.options[this.selectedIndex].className">
                                 <option class="holder_col" value="" selected disabled>選択してください</option>
                                 <option class="active_col" value="">選択してください1</option>
                                 <option class="active_col" value="">選択してください2</option>
@@ -155,4 +161,5 @@
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/custom.js"></script>
 </body>
+
 </html>
