--- a/privacy.html
+++ b/privacy.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Gordon Estate</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <link rel="stylesheet" type="text/css" href="css/responsive-tabs.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="images/favicon.png">
 </head>
+
 <body>
-    <div class="loader-wrapper"><div class="loader"></div></div>
+    <div class="loader-wrapper">
+        <div class="loader"></div>
+    </div>
     <main class="main">
         <header class="site_header inner_page_header">
             <div class="custom_container">
@@ -132,9 +138,12 @@
         </footer>
     </main>
     <script src="js/jquery.min.js"></script>
-    <script src="js/fonts-awesome-5.js"></script>
-    <script src="js/intersection-observer-polyfill.js"></script>
-    <script src="js/responsiveTabs.min.js"></script>
-    <script src="js/custom.js"></script>
+	<script src="js/fonts-awesome-5.js"></script>
+	<script src="js/intersection-observer-polyfill.js"></script>
+	<script src="js/responsiveTabs.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/custom.js"></script>
 </body>
+
 </html>
