--- a/work.html
+++ b/work.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Gordon Estate</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <link rel="stylesheet" type="text/css" href="css/responsive-tabs.css">
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="images/favicon.png">
 </head>
+
 <body>
-    <div class="loader-wrapper"><div class="loader"></div></div>
+    <div class="loader-wrapper">
+        <div class="loader"></div>
+    </div>
     <main class="main">
         <header class="site_header inner_page_header">
             <div class="custom_container">
@@ -76,7 +81,7 @@
                         <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
                             トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
                             ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                            。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-layer io fade upS">
@@ -110,7 +115,7 @@
                         <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
                             トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
                             ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                            。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-layer io fade upS">
@@ -144,7 +149,7 @@
                         <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
                             トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
                             ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                            。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-layer io fade upS">
@@ -178,7 +183,7 @@
                         <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
                             トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
                             ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                            。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-layer io fade upS">
@@ -212,7 +217,7 @@
                         <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
                             トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
                             ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                            。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-pagination">
@@ -311,10 +316,12 @@
         </footer>
     </main>
     <script src="js/jquery.min.js"></script>
-    <script src="js/fonts-awesome-5.js"></script>
-    <script src="js/intersection-observer-polyfill.js"></script>
-    <script src="js/responsiveTabs.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/custom.js"></script>
+	<script src="js/fonts-awesome-5.js"></script>
+	<script src="js/intersection-observer-polyfill.js"></script>
+	<script src="js/responsiveTabs.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/custom.js"></script>
 </body>
+
 </html>
