--- a/faq.html
+++ b/faq.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Gordon Estate</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <link rel="stylesheet" type="text/css" href="css/responsive-tabs.css">
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="images/favicon.png">
 </head>
+
 <body>
-    <div class="loader-wrapper"><div class="loader"></div></div>
+    <div class="loader-wrapper">
+        <div class="loader"></div>
+    </div>
     <main class="main">
         <header class="site_header inner_page_header">
             <div class="custom_container">
@@ -84,7 +89,7 @@
                 <div class="howto-contact-sub">
                     <div class="underline_heading io fade upS">
                         <div class="custom_container">
-                            <h2><span>ご相談や詳しい内容につきましてはこ</span> <br class="csp"/> <span>ちらからお問い合わせください！</span></h2>
+                            <h2><span>ご相談や詳しい内容につきましてはこ</span> <br class="csp" /> <span>ちらからお問い合わせください！</span></h2>
                         </div>
                     </div>
                     <div class="howto-contact-content">
@@ -165,10 +170,12 @@
         </footer>
     </main>
     <script src="js/jquery.min.js"></script>
-    <script src="js/fonts-awesome-5.js"></script>
-    <script src="js/intersection-observer-polyfill.js"></script>
-    <script src="js/responsiveTabs.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/custom.js"></script>
+	<script src="js/fonts-awesome-5.js"></script>
+	<script src="js/intersection-observer-polyfill.js"></script>
+	<script src="js/responsiveTabs.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/custom.js"></script>
 </body>
+
 </html>
