--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Gordon Estate</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/responsive-tabs.css">
-    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
+	<link rel="stylesheet" type="text/css" href="css/slick.css" />
+	<link rel="stylesheet" type="text/css" href="css/responsive-tabs.css">
+	<link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="images/favicon.png">
 </head>
+
 <body>
-	<div class="loader-wrapper"><div class="loader"></div></div>
+	<div class="loader-wrapper">
+		<div class="loader"></div>
+	</div>
 	<main class="main top_page_header">
 		<header class="site_header top_page_header">
 			<div class="custom_container">
 				<a class="header_logo" href="index.html">
 					<img src="images/logo.png" alt="logo image">
 				</a>
-				<a href="javascript:void(0);" class="navbar_toggler csp" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+				<a href="javascript:void(0);" class="navbar_toggler csp" type="button" data-toggle="collapse"
+					data-target="#collapsibleNavbar">
 					<div class="navbar_toggler_inner"></div>
 				</a>
 				<nav class="custom_navbar">
 					<ul>
 						<li><a href="#">会社案内</a></li>
-                        <li><a href="#">ご購入・ご売却について</a></li>
-                        <li><a href="#">賃貸管理</a></li>
-                        <li><a href="#">実績一覧</a></li>
-                        <li><a href="#">採用情報</a></li>
-                        <li><a href="#">お問い合わせ</a></li>
+						<li><a href="#">ご購入・ご売却について</a></li>
+						<li><a href="#">賃貸管理</a></li>
+						<li><a href="#">実績一覧</a></li>
+						<li><a href="#">採用情報</a></li>
+						<li><a href="#">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -98,8 +104,10 @@
 						<div class="custom_row">
 							<div class="custom_col_image">
 								<div class="busniess_image_box">
-									<img src="images/busniess_image_1.png" class="busniess_image_inner" alt="busniess image">
-									<img src="images/busniess_image_3.png" class="busniess_image_inner_second" alt="busniess image">
+									<img src="images/busniess_image_1.png" class="busniess_image_inner"
+										alt="busniess image">
+									<img src="images/busniess_image_3.png" class="busniess_image_inner_second"
+										alt="busniess image">
 								</div>
 							</div>
 							<div class="custom_col_text">
@@ -110,7 +118,7 @@
 										迅速に行いトラブルのない取引を実現しています。<br>
 										物件売却をご検討の方、「高値売却」「早期売却」は<br>
 										当社にお任せください。<br>
-									仲介営業のエキスパートが全力で販売活動を行います。</p>
+										仲介営業のエキスパートが全力で販売活動を行います。</p>
 									<a href="#"><span>▶</span>詳しくはこちら</a>
 								</div>
 							</div>
@@ -124,8 +132,10 @@
 						<div class="custom_row custom_row_reverse">
 							<div class="custom_col_image">
 								<div class="busniess_image_box">
-									<img src="images/busniess_image_2.png" class="busniess_image_inner" alt="busniess image">
-									<img src="images/busniess_image_4.png" class="busniess_image_inner_second" alt="busniess image">
+									<img src="images/busniess_image_2.png" class="busniess_image_inner"
+										alt="busniess image">
+									<img src="images/busniess_image_4.png" class="busniess_image_inner_second"
+										alt="busniess image">
 								</div>
 							</div>
 							<div class="custom_col_text">
@@ -136,7 +146,7 @@
 										または収支改善など賃貸管理でお困りの方は、当社へ<br>
 										ご相談ください。不動産投資の成功・失敗を左右するのは<br>
 										「管理会社の選択」です。当社が成功できる賃貸経営を<br>
-									実現いたします。賃貸管理のお悩みはすべて当社が解決します。</p>
+										実現いたします。賃貸管理のお悩みはすべて当社が解決します。</p>
 									<a href="#"><span>▶</span>詳しくはこちら</a>
 								</div>
 							</div>
@@ -145,7 +155,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="trading_section">
+		<!-- <section class="trading_section">
 			<div class="line_heading io fade upS">
 				<h3>Trading Results</h3>
 				<p>最新売買の実績</p>
@@ -191,6 +201,71 @@
 								</div>
 								<div class="trading_text">
 									<p>エステムコート梅田・天神橋Ⅱグラシオ</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<a class="io fade upS" href="#"><span>▶</span> その他の実績はこちら</a>
+				</div>
+			</div>
+		</section> -->
+		<section class="trading_section">
+			<div class="line_heading io fade upS">
+				<h3>Trading Results</h3>
+				<p>最新売買の実績</p>
+			</div>
+			<div class="trading_content">
+				<div class="custom_container">
+					<div class="trading_content_slider">
+						<div class="trading_content_slider_item">
+							<div class="trading_box io fade upS">
+								<div class="trading_image">
+									<img src="images/tranding_image_1.png" align="tranding image">
+								</div>
+								<div class="trading_text">
+									<p>エステムコート難波<br>
+										サウスプレイスⅢラ・パーク</p>
+								</div>
+							</div>
+						</div>
+						<div class="trading_content_slider_item">
+							<div class="trading_box io fade upS">
+								<div class="trading_image">
+									<img src="images/tranding_image_2.png" align="tranding image">
+								</div>
+								<div class="trading_text">
+									<p>エステムプラザ京都聚楽第 粋邸</p>
+								</div>
+							</div>
+						</div>
+						<div class="trading_content_slider_item">
+							<div class="trading_box io fade upS">
+								<div class="trading_image">
+									<img src="images/tranding_image_3.png" align="tranding image">
+								</div>
+								<div class="trading_text">
+									<p>エステムコート三宮駅前ラ・ドゥー</p>
+								</div>
+							</div>
+						</div>
+						<div class="trading_content_slider_item">
+							<div class="trading_box io fade upS">
+								<div class="trading_image">
+									<img src="images/tranding_image_4.png" align="tranding image">
+								</div>
+								<div class="trading_text">
+									<p>エステムコート梅田・天神橋Ⅱグラシオ</p>
+								</div>
+							</div>
+						</div>
+						<div class="trading_content_slider_item">
+							<div class="trading_box io fade upS">
+								<div class="trading_image">
+									<img src="images/tranding_image_1.png" align="tranding image">
+								</div>
+								<div class="trading_text">
+									<p>エステムコート難波<br>
+										サウスプレイスⅢラ・パーク</p>
 								</div>
 							</div>
 						</div>
@@ -249,7 +324,7 @@
 						<div class="custom_col">
 							<p>〒532-0011<br>
 								大阪府大阪市淀川区西中島3丁目11-26<br>
-							Auroraビル新大阪６F</p>
+								Auroraビル新大阪６F</p>
 						</div>
 						<div class="custom_col">
 							<div class="footer_table">
@@ -282,18 +357,19 @@
 		</footer>
 	</main>
 	<script src="js/jquery.min.js"></script>
-    <script src="js/fonts-awesome-5.js"></script>
-    <script src="js/intersection-observer-polyfill.js"></script>
-    <script src="js/responsiveTabs.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/custom.js"></script>
-	<script type="text/javascript">
-		$(window).on('load resize scroll', function(){
+	<script src="js/fonts-awesome-5.js"></script>
+	<script src="js/intersection-observer-polyfill.js"></script>
+	<script src="js/responsiveTabs.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/custom.js"></script>
+	<script>
+		$(window).on('load resize scroll', function () {
 			var screen = jQuery(window).width();
-			var	windowHeight = $(window).height();
-			var	navHeight = $("header.site_header").innerHeight();
-			var	windowTop = $(window).scrollTop();
-			if(windowTop > 0) {
+			var windowHeight = $(window).height();
+			var navHeight = $("header.site_header").innerHeight();
+			var windowTop = $(window).scrollTop();
+			if (windowTop > 0) {
 				$("header.site_header").addClass("header_fixed");
 			} else {
 				$("header.site_header").removeClass("header_fixed");
@@ -301,4 +377,5 @@
 		});
 	</script>
 </body>
+
 </html>
