--- a/sales.html
+++ b/sales.html
@@ -1,17 +1,21 @@
-
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Gordon Estate</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <link rel="stylesheet" type="text/css" href="css/responsive-tabs.css">
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="images/favicon.png">
 </head>
+
 <body>
-    <div class="loader-wrapper"><div class="loader"></div></div>
+    <div class="loader-wrapper">
+        <div class="loader"></div>
+    </div>
     <main class="main">
         <header class="site_header inner_page_header">
             <div class="custom_container">
@@ -47,13 +51,13 @@
         <section class="sales-management-section">
             <div class="custom_container">
                 <div class="underline_heading io fade upS">
-                    <h2><span>お客様の大切な物件管理は当社</span> <br class="csp-675"/> <span>にお任せください。</span></h2>
+                    <h2><span>お客様の大切な物件管理は当社</span> <br class="csp-675" /> <span>にお任せください。</span></h2>
                 </div>
                 <div class="sales-management-para io fade upS">
                     <p>賃貸管理、滞納、入居手続きから退去手続きまで、マンション経営に関わる
                         すべての業務を当社が代行致します。</p>
                     <p>そして資産価値の維持だけでなく、高めていくことが賃貸経営を成功させるには
-                    必要だと考え、様々な面でオーナー様の収益を最優先致します。</p>
+                        必要だと考え、様々な面でオーナー様の収益を最優先致します。</p>
                 </div>
             </div>
         </section>
@@ -90,7 +94,7 @@
                         <div class="sales-rent-layer io fade upS">
                             <h4>３. クレーム対応</h4>
                             <p>入居者様からのクレームなど、各種問い合わせ
-                                の対応を致します。<br/>
+                                の対応を致します。<br />
                                 迅速かつ適正な判断が要求される場合でも、
                                 当社がスムーズに適切な対応を行います。</p>
                         </div>
@@ -192,11 +196,12 @@
                     <div class="underline_heading io fade upS">
                         <h2><span>室内リフォーム画像をお持ちのデ</span><span>バイスで確認して頂けます。</span></h2>
                         <p>室内リフォームのビフォーアフターをお手持ちのパソコンやタブレット、スマートフォンから
-                            ３６０度カメラ撮影の画像でご確認していただくことができます。<br/>
+                            ３６０度カメラ撮影の画像でご確認していただくことができます。<br />
                             現地に行くことなく、自宅やオフィスから現場の状況を把握していただくことが出来ます！</p>
                     </div>
                     <div class="big-img">
-                        <iframe src="https://r61535432.theta360.biz/t/09e14c94-9f74-11ec-98af-0a45e0bc344d-1" title="description" width="100%" height="600px"></iframe>
+                        <iframe src="https://r61535432.theta360.biz/t/09e14c94-9f74-11ec-98af-0a45e0bc344d-1"
+                            title="description" width="100%" height="600px"></iframe>
                     </div>
                 </div>
             </div>
@@ -285,10 +290,12 @@
         </footer>
     </main>
     <script src="js/jquery.min.js"></script>
-    <script src="js/fonts-awesome-5.js"></script>
-    <script src="js/intersection-observer-polyfill.js"></script>
-    <script src="js/responsiveTabs.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/custom.js"></script>
+	<script src="js/fonts-awesome-5.js"></script>
+	<script src="js/intersection-observer-polyfill.js"></script>
+	<script src="js/responsiveTabs.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/custom.js"></script>
 </body>
+
 </html>
