--- a/top1.html
+++ b/top1.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Gordon Estate</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/responsive-tabs.css">
-    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
+	<link rel="stylesheet" type="text/css" href="css/slick.css" />
+	<link rel="stylesheet" type="text/css" href="css/responsive-tabs.css">
+	<link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="images/favicon.png">
 </head>
+
 <body>
-	<div class="loader-wrapper"><div class="loader"></div></div>
+	<div class="loader-wrapper">
+		<div class="loader"></div>
+	</div>
 	<main class="main top_page_header">
 		<header class="site_header top_page_header">
 			<div class="custom_container">
 				<a class="header_logo" href="index.html">
 					<img src="images/logo.png" alt="logo image">
 				</a>
-				<a href="javascript:void(0);" class="navbar_toggler csp" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+				<a href="javascript:void(0);" class="navbar_toggler csp" type="button" data-toggle="collapse"
+					data-target="#collapsibleNavbar">
 					<div class="navbar_toggler_inner"></div>
 				</a>
 				<nav class="custom_navbar">
 					<ul>
 						<li><a href="#">会社案内</a></li>
-                        <li><a href="#">ご購入・ご売却について</a></li>
-                        <li><a href="#">賃貸管理</a></li>
-                        <li><a href="#">実績一覧</a></li>
-                        <li><a href="#">採用情報</a></li>
-                        <li><a href="#">お問い合わせ</a></li>
+						<li><a href="#">ご購入・ご売却について</a></li>
+						<li><a href="#">賃貸管理</a></li>
+						<li><a href="#">実績一覧</a></li>
+						<li><a href="#">採用情報</a></li>
+						<li><a href="#">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -48,13 +54,20 @@
 			<div class="news_content">
 				<div class="news_content_inner">
 					<div class="news_item">
-						<div class="news_mark">▶</div><div class="news_date">2021/07/26</div><div class="news_title">夏季休業のお知らせ</div>
+						<div class="news_mark">▶</div>
+						<div class="news_date">2021/07/26</div>
+						<div class="news_title">夏季休業のお知らせ</div>
 					</div>
 					<div class="news_item">
-						<div class="news_mark">▶</div><div class="news_date">2021/07/26</div><div class="news_title">夏季休業のお知らせ</div>
+						<div class="news_mark">▶</div>
+						<div class="news_date">2021/07/26</div>
+						<div class="news_title">夏季休業のお知らせ</div>
 					</div>
 					<div class="news_item">
-						<div class="news_mark">▶</div><div class="news_date">2021/07/26</div><div class="news_title">夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ</div>
+						<div class="news_mark">▶</div>
+						<div class="news_date">2021/07/26</div>
+						<div class="news_title">夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ
+						</div>
 					</div>
 				</div>
 				<div class="btn_news">
@@ -68,8 +81,61 @@
 				<p>事業案内</p>
 			</div>
 			<div class="business_container">
-				
-			</div>		
+				<div class="custom_row">
+					<div class="custom_col_6">
+						<div class="busniess_box_theme2 busniess_real_estate_box2 io fade lr">
+							<div class="busniess_box_content_theme2">
+								<div class="custom_col_image_theme2">
+									<div class="busniess_image_box_theme2">
+										<img src="images/busniess_image_1.png" class="busniess_image_inner"
+											alt="busniess image">
+										<img src="images/busniess_image_3.png" class="busniess_image_inner_second"
+											alt="busniess image">
+									</div>
+								</div>
+								<div class="custom_col_text_theme2">
+									<div class="busniess_image_text_theme2">
+										<h3>信頼の不動産取引</h3>
+										<p>投資用マンションを専門に売買仲介を行っております。<br>
+											確かな取引実績と豊富な経験を元に、取引を安全かつ<br>
+											迅速に行いトラブルのない取引を実現しています。<br>
+											物件売却をご検討の方、「高値売却」「早期売却」は<br>
+											当社にお任せください。<br>
+											仲介営業のエキスパートが全力で販売活動を行います。</p>
+										<a href="#"><span>▶</span>詳しくはこちら</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="custom_col_6">
+						<div class="busniess_box_theme2 busniess_management_box2 io fade rl">
+							<div class="busniess_box_content_theme2">
+								<div class="custom_col_image_theme2">
+									<div class="busniess_image_box_theme2">
+										<img src="images/busniess_image_2.png" class="busniess_image_inner"
+											alt="busniess image">
+										<img src="images/busniess_image_4.png" class="busniess_image_inner_second"
+											alt="busniess image">
+									</div>
+								</div>
+								<div class="custom_col_text_theme2">
+									<div class="busniess_image_text_theme2">
+										<h3>安心の賃貸管理</h3>
+										<p>大阪、兵庫、京都の投資用マンションの賃貸管理事業を<br>
+											展開しております。ご所有物件の空室・リフォーム・滞納<br>
+											または収支改善など賃貸管理でお困りの方は、当社へ<br>
+											ご相談ください。不動産投資の成功・失敗を左右するのは<br>
+											「管理会社の選択」です。当社が成功できる賃貸経営を<br>
+											実現いたします。賃貸管理のお悩みはすべて当社が解決します。</p>
+										<a href="#"><span>▶</span>詳しくはこちら</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 		<section class="trading_section pattern1">
 			<div class="line_heading io fade upS">
@@ -78,19 +144,19 @@
 			</div>
 			<div class="trading_content">
 				<div class="custom_container">
-					<div class="custom_row">
-						<div class="custom_col_4">
+					<div class="trading_content_slider">
+						<div class="trading_content_slider_item">
 							<div class="trading_box io fade upS">
 								<div class="trading_image">
 									<img src="images/tranding_image_1.png" align="tranding image">
 								</div>
 								<div class="trading_text">
 									<p>エステムコート難波<br>
-									サウスプレイスⅢラ・パーク</p>
+										サウスプレイスⅢラ・パーク</p>
 								</div>
 							</div>
 						</div>
-						<div class="custom_col_4">
+						<div class="trading_content_slider_item">
 							<div class="trading_box io fade upS">
 								<div class="trading_image">
 									<img src="images/tranding_image_2.png" align="tranding image">
@@ -100,7 +166,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="custom_col_4">
+						<div class="trading_content_slider_item">
 							<div class="trading_box io fade upS">
 								<div class="trading_image">
 									<img src="images/tranding_image_3.png" align="tranding image">
@@ -110,13 +176,24 @@
 								</div>
 							</div>
 						</div>
-						<div class="custom_col_4">
+						<div class="trading_content_slider_item">
 							<div class="trading_box io fade upS">
 								<div class="trading_image">
 									<img src="images/tranding_image_4.png" align="tranding image">
 								</div>
 								<div class="trading_text">
 									<p>エステムコート梅田・天神橋Ⅱグラシオ</p>
+								</div>
+							</div>
+						</div>
+						<div class="trading_content_slider_item">
+							<div class="trading_box io fade upS">
+								<div class="trading_image">
+									<img src="images/tranding_image_1.png" align="tranding image">
+								</div>
+								<div class="trading_text">
+									<p>エステムコート難波<br>
+										サウスプレイスⅢラ・パーク</p>
 								</div>
 							</div>
 						</div>
@@ -186,7 +263,7 @@
 						<div class="custom_col">
 							<p>〒532-0011<br>
 								大阪府大阪市淀川区西中島3丁目11-26<br>
-							Auroraビル新大阪６F</p>
+								Auroraビル新大阪６F</p>
 						</div>
 						<div class="custom_col">
 							<div class="footer_table">
@@ -219,18 +296,19 @@
 		</footer>
 	</main>
 	<script src="js/jquery.min.js"></script>
-    <script src="js/fonts-awesome-5.js"></script>
-    <script src="js/intersection-observer-polyfill.js"></script>
-    <script src="js/responsiveTabs.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/custom.js"></script>
-	<script type="text/javascript">
-		$(window).on('load resize scroll', function(){
+	<script src="js/fonts-awesome-5.js"></script>
+	<script src="js/intersection-observer-polyfill.js"></script>
+	<script src="js/responsiveTabs.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/custom.js"></script>
+	<script>
+		$(window).on('load resize scroll', function () {
 			var screen = jQuery(window).width();
-			var	windowHeight = $(window).height();
-			var	navHeight = $("header.site_header").innerHeight();
-			var	windowTop = $(window).scrollTop();
-			if(windowTop > 0) {
+			var windowHeight = $(window).height();
+			var navHeight = $("header.site_header").innerHeight();
+			var windowTop = $(window).scrollTop();
+			if (windowTop > 0) {
 				$("header.site_header").addClass("header_fixed");
 			} else {
 				$("header.site_header").removeClass("header_fixed");
@@ -238,4 +316,5 @@
 		});
 	</script>
 </body>
+
 </html>
