--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<h3>Business</h3>
 				<p>事業案内</p>
 			</div>
-			<div class="busniess_box busniess_real_estate_box io fade lr">
+			<div class="busniess_box busniess_real_estate_box io iolong fade lr">
 				<div class="custom_container right_align">
 					<div class="busniess_box_content">
 						<div class="custom_row">
@@ -126,7 +126,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="busniess_box busniess_management_box io fade rl">
+			<div class="busniess_box busniess_management_box io iolong fade rl">
 				<div class="custom_container left_align">
 					<div class="busniess_box_content">
 						<div class="custom_row custom_row_reverse">
