--- a/top1.html
+++ b/top1.html
@@ -52,7 +52,7 @@
 				<p>新着情報</p>
 			</div>
 			<div class="news_content">
-				<div class="news_content_inner">
+				<div class="news_content_inner io fade upS">
 					<div class="news_item">
 						<div class="news_mark">▶</div>
 						<div class="news_date">2021/07/26</div>
@@ -70,7 +70,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="btn_news">
+				<div class="btn_news io fade upS">
 					<a href="#"><span>▶</span>新着情報</a>
 				</div>
 			</div>
@@ -83,7 +83,7 @@
 			<div class="business_container">
 				<div class="custom_row">
 					<div class="custom_col_6">
-						<div class="busniess_box_theme2 busniess_real_estate_box2 io fade lr">
+						<div class="busniess_box_theme2 busniess_real_estate_box2 io iolong fade lr">
 							<div class="busniess_box_content_theme2">
 								<div class="custom_col_image_theme2">
 									<div class="busniess_image_box_theme2">
@@ -109,7 +109,7 @@
 						</div>
 					</div>
 					<div class="custom_col_6">
-						<div class="busniess_box_theme2 busniess_management_box2 io fade rl">
+						<div class="busniess_box_theme2 busniess_management_box2 io iolong fade rl">
 							<div class="busniess_box_content_theme2">
 								<div class="custom_col_image_theme2">
 									<div class="busniess_image_box_theme2">
@@ -208,7 +208,7 @@
 					<h3>Recruit</h3>
 					<p>採用情報</p>
 				</div>
-				<div class="recruit_btn">
+				<div class="recruit_btn io fade upS">
 					<a class="" href="#"><span>▶</span> 応募ページ</a>
 				</div>
 			</div>
