--- a/top1.html
+++ b/top1.html
@@ -83,7 +83,7 @@
 			<div class="business_container">
 				<div class="custom_row">
 					<div class="custom_col_6">
-						<div class="busniess_box_theme2 busniess_real_estate_box2 io iolong fade lr">
+						<div class="busniess_box_theme2 busniess_real_estate_box2 io iolong fade upS">
 							<div class="busniess_box_content_theme2">
 								<div class="custom_col_image_theme2">
 									<div class="busniess_image_box_theme2">
@@ -109,7 +109,7 @@
 						</div>
 					</div>
 					<div class="custom_col_6">
-						<div class="busniess_box_theme2 busniess_management_box2 io iolong fade rl">
+						<div class="busniess_box_theme2 busniess_management_box2 io iolong fade upS">
 							<div class="busniess_box_content_theme2">
 								<div class="custom_col_image_theme2">
 									<div class="busniess_image_box_theme2">
