--- a/top1.html
+++ b/top1.html
@@ -212,6 +212,18 @@
 					<a class="" href="#"><span>▶</span> 応募ページ</a>
 				</div>
 			</div>
+			<div class="recruit_slider">
+				<div>
+					<div class="recruit_slider_image">
+						<img src="images/recurit_image_1.png" alt="recruit image">
+					</div>
+				</div>
+				<div>
+					<div class="recruit_slider_image">
+						<img src="images/recurit_image_2.png" alt="recruit image">
+					</div>
+				</div>
+			</div>
 		</section>
 		<section class="contact_section pattern1">
 			<div class="custom_container">
