--- a/top1.html
+++ b/top1.html
@@ -38,12 +38,26 @@
 				</nav>
 			</div>
 		</header>
-		<section class="banner_section pattern1 before_load banner_animation">
-			<div class="custom_container">
+		<section class="banner_section pattern1 before_load banner_animation before_after_none">
+			<div class="banner_slider">
+				<div class="banner_slider_item">
+					<img src="images/banner_slider_img01.png"/>
+				</div>
+				<div class="banner_slider_item">
+					<img src="images/banner_slider_img02.png"/>
+				</div>
+				<div class="banner_slider_item">
+					<img src="images/banner_slider_img03.png"/>
+				</div>
+			</div>
+			<div class="banner_content_wrapper custom_container">
 				<div class="banner_content">
 					<h1>RELIABLE ESTATE AGENT</h1>
 					<p>Estate Agency ＆Property Management</p>
 				</div>
+			</div>
+			<div class="banner_slider_overlay">
+				<img src="images/banner_overlay_blue.png" />
 			</div>
 		</section>
 		<section class="news_section pattern1 banner_after_section">
