--- a/top1.html
+++ b/top1.html
@@ -39,7 +39,7 @@
 			</div>
 		</header>
 		<section class="banner_section pattern1 before_load banner_animation before_after_none">
-			<div class="banner_slider">
+			<div class="banner_slider" dir="rtl">
 				<div class="banner_slider_item">
 					<img src="images/banner_slider_img01.png"/>
 				</div>
@@ -51,7 +51,7 @@
 				</div>
 			</div>
 			<div class="banner_content_wrapper custom_container">
-				<div class="banner_content">
+				<div class="banner_content io fade upS">
 					<h1>RELIABLE ESTATE AGENT</h1>
 					<p>Estate Agency ＆Property Management</p>
 				</div>
