--- a/company.html
+++ b/company.html
@@ -40,9 +40,10 @@
         </header>
         <section class="regular-banner banner_animation">
             <div class="regular-banner-wrapper">
-                <img src="images/company-page-banner.jpg" class="regular-banner-img" />
+                <img src="images/company-page-banner.png" class="regular-banner-img" />
             </div>
         </section>
+<div class="white_wrap">
         <div class="regular-head margin-top-minus io fade upS banner_after_section">
             <div class="regular-head-wrapper">
                 <h2>会社案内</h2>
@@ -219,6 +220,7 @@
                 </div>
             </div>
         </section>
+</div>
         <footer class="site_footer">
             <div class="footer_text">
                 <div class="custom_container">
