--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
         </header>
         <section class="regular-banner banner_animation">
             <div class="regular-banner-wrapper">
-                <img src="images/contact_banner.jpg" class="regular-banner-img" />
+                <img src="images/contact_banner.png" class="regular-banner-img" />
             </div>
         </section>
         <div class="regular-head margin-top-minus banner_after_section">
