--- a/faq.html
+++ b/faq.html
@@ -23,24 +23,66 @@
                     <img src="images/logo.png" alt="logo image">
                 </a>
                 <a href="javascript:void(0);" class="navbar_toggler csp" type="button" data-toggle="collapse"
-                    data-target="#collapsibleNavbar">
-                    <div class="navbar_toggler_inner"></div>
-                </a>
-                <nav class="custom_navbar">
-                    <ul>
-                        <li><a href="#">会社案内</a></li>
-                        <li><a href="#">ご購入・ご売却について</a></li>
-                        <li><a href="#">賃貸管理</a></li>
-                        <li><a href="#">実績一覧</a></li>
-                        <li><a href="#">採用情報</a></li>
-                        <li><a href="#">お問い合わせ</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <section class="regular-banner banner_animation">
-            <div class="regular-banner-wrapper">
-                <img src="images/faq_banner.jpg" class="regular-banner-img" />
+                data-target="#collapsibleNavbar">
+                <div class="navbar_toggler_inner"></div>
+            </a>
+            <nav class="custom_navbar">
+                <ul>
+                    <li><a href="#">会社案内</a></li>
+                    <li><a href="#">ご購入・ご売却について</a></li>
+                    <li><a href="#">賃貸管理</a></li>
+                    <li><a href="#">実績一覧</a></li>
+                    <li><a href="#">採用情報</a></li>
+                    <li><a href="#">お問い合わせ</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section class="regular-banner banner_animation">
+        <div class="regular-banner-wrapper">
+            <img src="images/faq_banner.png" class="regular-banner-img" />
+        </div>
+    </section>
+    <div class="white_wrap">
+        <section class="faq_section io fade upS banner_after_section">
+            <div class="custom_container">
+                <div class="blue_title_bg">
+                    <div class="yellow_inner_border">
+                        <div class="heading_with_bg">
+                            <h3>ご購入時によくある質問</h3>
+                        </div>
+                        <div class="faq_content">
+                            <h4>現在賃貸中で入居者がいますが、売却できますか？</h4>
+                            <div class="answer_content">
+                                <p>入居者がいる物件の場合、所有者変更を現入居者に通知し、そのまま入居者がいる状態でご売却出来ます。物件によっては、逆に有利な条件になります。</p>
+                            </div>
+                            <h4>現在賃貸中で入居者がいますが、売却できますか？</h4>
+                            <div class="answer_content">
+                                <p>入居者がいる物件の場合、所有者変更を現入居者に通知し、そのまま入居者がいる状態でご売却出来ます。物件によっては、逆に有利な条件になります。</p>
+                            </div>
+                            <h4>現在賃貸中で入居者がいますが、売却できますか？</h4>
+                            <div class="answer_content">
+                                <p>入居者がいる物件の場合、所有者変更を現入居者に通知し、そのまま入居者がいる状態でご売却出来ます。物件によっては、逆に有利な条件になります。</p>
+                            </div>
+                            <h4>現在賃貸中で入居者がいますが、売却できますか？</h4>
+                            <div class="answer_content">
+                                <p>入居者がいる物件の場合、所有者変更を現入居者に通知し、そのまま入居者がいる状態でご売却出来ます。物件によっては、逆に有利な条件になります。</p>
+                            </div>
+                            <h4>現在賃貸中で入居者がいますが、売却できますか？</h4>
+                            <div class="answer_content">
+                                <p>入居者がいる物件の場合、所有者変更を現入居者に通知し、そのまま入居者がいる状態でご売却出来ます。物件によっては、逆に有利な条件になります。</p>
+                            </div>
+                            <h4>現在賃貸中で入居者がいますが、売却できますか？</h4>
+                            <div class="answer_content">
+                                <p>入居者がいる物件の場合、所有者変更を現入居者に通知し、そのまま入居者がいる状態でご売却出来ます。物件によっては、逆に有利な条件になります。</p>
+                            </div>
+                            <h4>現在賃貸中で入居者がいますが、売却できますか？</h4>
+                            <div class="answer_content">
+                                <p>入居者がいる物件の場合、所有者変更を現入居者に通知し、そのまま入居者がいる状態でご売却出来ます。物件によっては、逆に有利な条件になります。</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="faq_section io fade upS banner_after_section">
@@ -87,7 +129,7 @@
         <section class="howto-contact-section">
             <div class="custom_container">
                 <div class="howto-contact-sub">
-                    <div class="underline_heading io fade upS">
+                    <div class="underline_heading">
                         <div class="custom_container">
                             <h2><span>ご相談や詳しい内容につきましてはこ</span> <br class="csp" /> <span>ちらからお問い合わせください！</span></h2>
                         </div>
@@ -95,7 +137,7 @@
                     <div class="howto-contact-content">
                         <div class="custom_row">
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx io fade upS">
+                                <div class="content-bx">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-call-blue.png" />
@@ -110,7 +152,7 @@
                                 </div>
                             </div>
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx io fade upS">
+                                <div class="content-bx">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-mail-blue.png" />
@@ -129,53 +171,54 @@
                 </div>
             </div>
         </section>
-        <footer class="site_footer">
-            <div class="footer_text">
-                <div class="custom_container">
-                    <img src="images/logo_footer.png" alt="logo image">
-                    <div class="custom_row">
-                        <div class="custom_col">
-                            <p>〒532-0011<br>
-                                大阪府大阪市淀川区西中島3丁目11-26<br>
-                                Auroraビル新大阪６F</p>
-                        </div>
-                        <div class="custom_col">
-                            <div class="footer_table">
-                                <div class="footer_table_row">
-                                    <div class="footer_table_th">
-                                        <p>TEL</p>
-                                    </div>
-                                    <div class="footer_table_td">
-                                        <a href="#">06-6390-7500</a>
-                                    </div>
+    </div>
+    <footer class="site_footer">
+        <div class="footer_text">
+            <div class="custom_container">
+                <img src="images/logo_footer.png" alt="logo image">
+                <div class="custom_row">
+                    <div class="custom_col">
+                        <p>〒532-0011<br>
+                            大阪府大阪市淀川区西中島3丁目11-26<br>
+                        Auroraビル新大阪６F</p>
+                    </div>
+                    <div class="custom_col">
+                        <div class="footer_table">
+                            <div class="footer_table_row">
+                                <div class="footer_table_th">
+                                    <p>TEL</p>
                                 </div>
-                                <div class="footer_table_row">
-                                    <div class="footer_table_th">
-                                        <p>営業時間</p>
-                                    </div>
-                                    <div class="footer_table_td">
-                                        <p>11：00～20：00<br>（土曜日・第3日曜日を除く）</p>
-                                    </div>
+                                <div class="footer_table_td">
+                                    <a href="#">06-6390-7500</a>
+                                </div>
+                            </div>
+                            <div class="footer_table_row">
+                                <div class="footer_table_th">
+                                    <p>営業時間</p>
+                                </div>
+                                <div class="footer_table_td">
+                                    <p>11：00～20：00<br>（土曜日・第3日曜日を除く）</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="footer_conpyright">
-                <div class="custom_container">
-                    <p>©2019　GORDON ESTATE Co.,LTD</p>
-                </div>
+        </div>
+        <div class="footer_conpyright">
+            <div class="custom_container">
+                <p>©2019　GORDON ESTATE Co.,LTD</p>
             </div>
-        </footer>
-    </main>
-    <script src="js/jquery.min.js"></script>
-	<script src="js/fonts-awesome-5.js"></script>
-	<script src="js/intersection-observer-polyfill.js"></script>
-	<script src="js/responsiveTabs.min.js"></script>
-	<script src="js/jquery-ui.min.js"></script>
-	<script src="js/slick.min.js"></script>
-	<script src="js/custom.js"></script>
+        </div>
+    </footer>
+</main>
+<script src="js/jquery.min.js"></script>
+<script src="js/fonts-awesome-5.js"></script>
+<script src="js/intersection-observer-polyfill.js"></script>
+<script src="js/responsiveTabs.min.js"></script>
+<script src="js/jquery-ui.min.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/custom.js"></script>
 </body>
 
 </html>
