--- a/howto.html
+++ b/howto.html
@@ -40,9 +40,10 @@
         </header>
         <section class="regular-banner banner_animation">
             <div class="regular-banner-wrapper">
-                <img src="images/purchase-sale-banner.jpg" class="regular-banner-img" />
+                <img src="images/purchase-sale-banner.png" class="regular-banner-img" />
             </div>
         </section>
+<div class="white_wrap">
         <div class="regular-head margin-top-minus io fade upS banner_after_section">
             <div class="regular-head-wrapper">
                 <h2>ご購入・ご売却について</h2>
@@ -86,7 +87,6 @@
                                         <li><a href="#re-purchase_3">Step 3</a></li>
                                         <li><a href="#re-purchase_4">Step 4</a></li>
                                         <li><a href="#re-purchase_5">Step 5</a></li>
-                                        <li><a href="#re-purchase_6">Step 6</a></li>
                                     </ul>
                                     <div class="tabs_content_item active_tab_on_load" id="re-purchase_1">
                                         <div class="item-inner">
@@ -168,22 +168,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="tabs_content_item" id="re-purchase_6">
-                                        <div class="item-inner">
-                                            <div class="flex-bx">
-                                                <div class="img-bx">
-
-                                                </div>
-                                                <div class="cont-bx">
-                                                    <h4>無料相談</h4>
-                                                    <p>お電話及びメールにて、ご相談を承ります。投資不動産に特化
-                                                        した当社ならではの豊富な売却ノウハウで完全サポート。
-                                                        当社は全ての営業社員が不動産投資に精通しておりますので、
-                                                        まずはお気軽にご相談ください。</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -209,7 +193,6 @@
                                         <li><a href="#re-sale_3">Step 3</a></li>
                                         <li><a href="#re-sale_4">Step 4</a></li>
                                         <li><a href="#re-sale_5">Step 5</a></li>
-                                        <li><a href="#re-sale_6">Step 6</a></li>
                                     </ul>
                                     <div class="tabs_content_item active_tab_on_load" id="re-sale_1">
                                         <div class="item-inner">
@@ -291,22 +274,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="tabs_content_item" id="re-sale_6">
-                                        <div class="item-inner">
-                                            <div class="flex-bx">
-                                                <div class="img-bx">
-
-                                                </div>
-                                                <div class="cont-bx">
-                                                    <h4>無料相談</h4>
-                                                    <p>お電話及びメールにて、ご相談を承ります。投資不動産に特化
-                                                        した当社ならではの豊富な売却ノウハウで完全サポート。
-                                                        当社は全ての営業社員が不動産投資に精通しておりますので、
-                                                        まずはお気軽にご相談ください。</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -317,13 +284,13 @@
         <section class="howto-contact-section">
             <div class="custom_container">
                 <div class="howto-contact-sub">
-                    <div class="underline_heading io fade upS">
+                    <div class="underline_heading">
                         <h2><span>ご相談や詳しい内容につきましてはこ</span> <br class="csp" /> <span>ちらからお問い合わせください！</span></h2>
                     </div>
                     <div class="howto-contact-content">
                         <div class="custom_row">
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx io fade upS">
+                                <div class="content-bx">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-call-blue.png" />
@@ -338,7 +305,7 @@
                                 </div>
                             </div>
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx io fade upS">
+                                <div class="content-bx">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-mail-blue.png" />
@@ -357,6 +324,7 @@
                 </div>
             </div>
         </section>
+</div>
         <footer class="site_footer">
             <div class="footer_text">
                 <div class="custom_container">
