--- a/privacy.html
+++ b/privacy.html
@@ -38,9 +38,10 @@
         </header>
         <section class="regular-banner banner_animation">
             <div class="regular-banner-wrapper">
-                <img src="images/purchase-sale-banner.jpg" class="regular-banner-img" />
+                <img src="images/prvacy_bg.png" class="regular-banner-img" />
             </div>
         </section>
+<div class="white_wrap">
         <div class="regular-head margin-top-minus banner_after_section">
             <div class="regular-head-wrapper io fade upS">
                 <h2>プライバシーポリシー</h2>
@@ -97,6 +98,7 @@
                 </div>
             </div>
         </section>
+</div>
         <footer class="site_footer">
             <div class="footer_text">
                 <div class="custom_container">
