--- a/sales.html
+++ b/sales.html
@@ -40,9 +40,10 @@
         </header>
         <section class="regular-banner banner_animation">
             <div class="regular-banner-wrapper">
-                <img src="images/sales-page-banner.jpg" class="regular-banner-img" />
+                <img src="images/sales-page-banner.png" class="regular-banner-img" />
             </div>
         </section>
+<div class="white_wrap">
         <div class="regular-head margin-top-minus banner_after_section">
             <div class="regular-head-wrapper io fade upS">
                 <h2>賃貸管理</h2>
@@ -73,16 +74,16 @@
         <section class="sales-rent-section">
             <div class="custom_container">
                 <div class="custom_row">
-                    <div class="custom_col_6">
-                        <div class="sales-rent-layer io fade upS">
+                    <div class="custom_col_6 io fade upS">
+                        <div class="sales-rent-layer">
                             <h4>１.家賃管理</h4>
                             <p>賃料収入を当社が集金して管理させて
                                 いただき、毎月末日までにオーナー様へ
                                 送金致します。</p>
                         </div>
                     </div>
-                    <div class="custom_col_6">
-                        <div class="sales-rent-layer io fade upS">
+                    <div class="custom_col_6 io fade upS">
+                        <div class="sales-rent-layer">
                             <h4>２. 家賃滞納者への対応</h4>
                             <p>家賃滞納が発生した場合、賃料を当社が保証
                                 します。また滞納催促賃料の回収にかかる
@@ -90,8 +91,8 @@
                                 全額負担致します。</p>
                         </div>
                     </div>
-                    <div class="custom_col_6">
-                        <div class="sales-rent-layer io fade upS">
+                    <div class="custom_col_6 io fade upS">
+                        <div class="sales-rent-layer">
                             <h4>３. クレーム対応</h4>
                             <p>入居者様からのクレームなど、各種問い合わせ
                                 の対応を致します。<br />
@@ -99,8 +100,8 @@
                                 当社がスムーズに適切な対応を行います。</p>
                         </div>
                     </div>
-                    <div class="custom_col_6">
-                        <div class="sales-rent-layer io fade upS">
+                    <div class="custom_col_6 io fade upS">
+                        <div class="sales-rent-layer">
                             <h4>４. 入居・退去時の対応</h4>
                             <p>退去受付から退去時の立ち合いや敷金精算、
                                 業者手配に至るまで一貫したサポートを行い
@@ -209,13 +210,13 @@
         <section class="howto-contact-section">
             <div class="custom_container">
                 <div class="howto-contact-sub">
-                    <div class="underline_heading io fade upS">
+                    <div class="underline_heading">
                         <h2><span>ご相談や詳しい内容につきましてはこ</span> <br class="csp" /> <span>ちらからお問い合わせください！</span></h2>
                     </div>
                     <div class="howto-contact-content">
                         <div class="custom_row">
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx io fade upS">
+                                <div class="content-bx">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-call-blue.png" />
@@ -230,7 +231,7 @@
                                 </div>
                             </div>
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx io fade upS">
+                                <div class="content-bx">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-mail-blue.png" />
@@ -249,6 +250,7 @@
                 </div>
             </div>
         </section>
+</div>
         <footer class="site_footer">
             <div class="footer_text">
                 <div class="custom_container">
