--- a/top1.html
+++ b/top1.html
@@ -51,7 +51,7 @@
 				</div>
 			</div>
 			<div class="banner_content_wrapper custom_container">
-				<div class="banner_content io fade upS">
+				<div class="banner_content io fade rl">
 					<h1>RELIABLE ESTATE AGENT</h1>
 					<p>Estate Agency ＆Property Management</p>
 				</div>
@@ -60,6 +60,7 @@
 				<img src="images/banner_overlay_blue.png" />
 			</div>
 		</section>
+<div class="white_wrap">
 		<section class="news_section pattern1 banner_after_section">
 			<div class="line_heading io fade upS">
 				<h3>News</h3>
@@ -83,9 +84,9 @@
 						<div class="news_title">夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ夏季休業のお知らせ
 						</div>
 					</div>
-				</div>
-				<div class="btn_news io fade upS">
-					<a href="#"><span>▶</span>新着情報</a>
+					<div class="btn_news io fade upS">
+						<a href="#"><span>▶</span>新着情報</a>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -160,7 +161,7 @@
 				<div class="custom_container">
 					<div class="trading_content_slider">
 						<div class="trading_content_slider_item">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_1.png" align="tranding image">
 								</div>
@@ -171,7 +172,7 @@
 							</div>
 						</div>
 						<div class="trading_content_slider_item">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_2.png" align="tranding image">
 								</div>
@@ -181,7 +182,7 @@
 							</div>
 						</div>
 						<div class="trading_content_slider_item">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_3.png" align="tranding image">
 								</div>
@@ -191,7 +192,7 @@
 							</div>
 						</div>
 						<div class="trading_content_slider_item">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_4.png" align="tranding image">
 								</div>
@@ -201,7 +202,7 @@
 							</div>
 						</div>
 						<div class="trading_content_slider_item">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_1.png" align="tranding image">
 								</div>
@@ -241,14 +242,14 @@
 		</section>
 		<section class="contact_section pattern1">
 			<div class="custom_container">
-				<div class="line_heading io fade upS">
+				<div class="line_heading">
 					<h3>Contact</h3>
 					<p>お問い合わせ</p>
 				</div>
 				<div class="howto-contact-content">
 					<div class="custom_row">
 						<div class="custom_col_6 columnn">
-							<div class="content-bx io fade upS">
+							<div class="content-bx">
 								<div class="head">
 									<div class="icon">
 										<img src="images/icon-call-blue.png">
@@ -263,7 +264,7 @@
 							</div>
 						</div>
 						<div class="custom_col_6 columnn">
-							<div class="content-bx io fade upS">
+							<div class="content-bx">
 								<div class="head">
 									<div class="icon">
 										<img src="images/icon-mail-blue.png">
@@ -281,6 +282,7 @@
 				</div>
 			</div>
 		</section>
+</div>
 		<footer class="site_footer">
 			<div class="footer_text">
 				<div class="custom_container">
