--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 				</div>
 			</div>
 		</section>
+<div class="white_wrap">
 		<section class="news_section banner_after_section">
 			<div class="line_heading io fade upS">
 				<h3>News</h3>
@@ -164,7 +165,7 @@
 				<div class="custom_container">
 					<div class="custom_row">
 						<div class="custom_col_4">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_1.png" align="tranding image">
 								</div>
@@ -175,7 +176,7 @@
 							</div>
 						</div>
 						<div class="custom_col_4">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_2.png" align="tranding image">
 								</div>
@@ -185,7 +186,7 @@
 							</div>
 						</div>
 						<div class="custom_col_4">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_3.png" align="tranding image">
 								</div>
@@ -195,7 +196,7 @@
 							</div>
 						</div>
 						<div class="custom_col_4">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_4.png" align="tranding image">
 								</div>
@@ -214,11 +215,11 @@
 				<h3>Trading Results</h3>
 				<p>最新売買の実績</p>
 			</div>
-			<div class="trading_content">
+			<div class="trading_content io fade upS">
 				<div class="custom_container">
 					<div class="trading_content_slider">
 						<div class="trading_content_slider_item">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_1.png" align="tranding image">
 								</div>
@@ -229,7 +230,7 @@
 							</div>
 						</div>
 						<div class="trading_content_slider_item">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_2.png" align="tranding image">
 								</div>
@@ -239,7 +240,7 @@
 							</div>
 						</div>
 						<div class="trading_content_slider_item">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_3.png" align="tranding image">
 								</div>
@@ -249,7 +250,7 @@
 							</div>
 						</div>
 						<div class="trading_content_slider_item">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_4.png" align="tranding image">
 								</div>
@@ -259,7 +260,7 @@
 							</div>
 						</div>
 						<div class="trading_content_slider_item">
-							<div class="trading_box io fade upS">
+							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_1.png" align="tranding image">
 								</div>
@@ -276,14 +277,14 @@
 		</section>
 		<section class="contact_section">
 			<div class="custom_container">
-				<div class="line_heading io fade upS">
+				<div class="line_heading">
 					<h3>Contact</h3>
 					<p>お問い合わせ</p>
 				</div>
 				<div class="howto-contact-content">
 					<div class="custom_row">
 						<div class="custom_col_6 columnn">
-							<div class="content-bx io fade upS">
+							<div class="content-bx">
 								<div class="head">
 									<div class="icon">
 										<img src="images/icon-call-blue.png">
@@ -298,7 +299,7 @@
 							</div>
 						</div>
 						<div class="custom_col_6 columnn">
-							<div class="content-bx io fade upS">
+							<div class="content-bx">
 								<div class="head">
 									<div class="icon">
 										<img src="images/icon-mail-blue.png">
@@ -316,6 +317,7 @@
 				</div>
 			</div>
 		</section>
+</div>
 		<footer class="site_footer">
 			<div class="footer_text">
 				<div class="custom_container">
