--- a/work.html
+++ b/work.html
@@ -40,9 +40,10 @@
         </header>
         <section class="regular-banner banner_animation">
             <div class="regular-banner-wrapper">
-                <img src="images/work-page-banner.jpg" class="regular-banner-img" />
+                <img src="images/work-page-banner.png" class="regular-banner-img" />
             </div>
         </section>
+<div class="white_wrap">
         <div class="regular-head margin-top-minus banner_after_section">
             <div class="regular-head-wrapper io fade upS">
                 <h2>実績一覧</h2>
@@ -51,173 +52,119 @@
         <section class="achievment-section">
             <div class="custom_container">
                 <div class="achievment-layer io fade upS">
-                    <div class="layer-head">
-                        <h3>プレサンス丸の内城雅</h3>
-                    </div>
-                    <div class="layer-flex">
-                        <div class="layer-img">
-                            <img src="images/achievment-layer01.jpg" />
+                    <div class="achievement-layer-wrap">
+                        <div class="layer-head">
+                            <h3>プレサンス丸の内城雅</h3>
                         </div>
-                        <div class="layer-content">
-                            <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
-                            <ul>
-                                <li>築年数　：　平成27年</li>
-                                <li>階層　：　12階</li>
-                                <li>広さ　：　22.42㎡</li>
-                                <li>ご職業　：　開業医</li>
-                                <li>ご年齢　：　50代</li>
-                            </ul>
-                            <div class="para cpc-1024">
-                                <h4>ご購入・ご売却の経緯</h4>
-                                <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
-                                    トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
-                                    ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                                    。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                        <div class="layer-flex">
+                            <div class="layer-img">
+                                <img src="images/achievment-layer01.jpg" />
+                            </div>
+                            <div class="layer-content">
+                                <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
+                                <ul>
+                                    <li>築年数　：　平成27年</li>
+                                    <li>階層　：　12階</li>
+                                    <li>広さ　：　22.42㎡</li>
+                                    <li>ご職業　：　開業医</li>
+                                    <li>ご年齢　：　50代</li>
+                                </ul>
+                                <div class="para">
+                                    <h4>ご購入・ご売却の経緯</h4>
+                                    <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
+                                        トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
+                                        ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
+                                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="para csp-1024">
-                        <h4>ご購入・ご売却の経緯</h4>
-                        <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
-                            トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
-                            ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                            。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-layer io fade upS">
-                    <div class="layer-head">
-                        <h3>プレサンス丸の内城雅</h3>
-                    </div>
-                    <div class="layer-flex">
-                        <div class="layer-img">
-                            <img src="images/achievment-layer01.jpg" />
+                    <div class="achievement-layer-wrap">
+                        <div class="layer-head">
+                            <h3>プレサンス丸の内城雅</h3>
                         </div>
-                        <div class="layer-content">
-                            <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
-                            <ul>
-                                <li>築年数　：　平成27年</li>
-                                <li>階層　：　12階</li>
-                                <li>広さ　：　22.42㎡</li>
-                                <li>ご職業　：　開業医</li>
-                                <li>ご年齢　：　50代</li>
-                            </ul>
-                            <div class="para cpc-1024">
-                                <h4>ご購入・ご売却の経緯</h4>
-                                <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
-                                    トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
-                                    ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                                    。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                        <div class="layer-flex">
+                            <div class="layer-img">
+                                <img src="images/achievment-layer01.jpg" />
+                            </div>
+                            <div class="layer-content">
+                                <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
+                                <ul>
+                                    <li>築年数　：　平成27年</li>
+                                    <li>階層　：　12階</li>
+                                    <li>広さ　：　22.42㎡</li>
+                                    <li>ご職業　：　開業医</li>
+                                    <li>ご年齢　：　50代</li>
+                                </ul>
+                                <div class="para">
+                                    <h4>ご購入・ご売却の経緯</h4>
+                                    <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
+                                        トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
+                                        ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
+                                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="para csp-1024">
-                        <h4>ご購入・ご売却の経緯</h4>
-                        <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
-                            トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
-                            ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                            。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-layer io fade upS">
-                    <div class="layer-head">
-                        <h3>プレサンス丸の内城雅</h3>
-                    </div>
-                    <div class="layer-flex">
-                        <div class="layer-img">
-                            <img src="images/achievment-layer01.jpg" />
+                    <div class="achievement-layer-wrap">
+                        <div class="layer-head">
+                            <h3>プレサンス丸の内城雅</h3>
                         </div>
-                        <div class="layer-content">
-                            <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
-                            <ul>
-                                <li>築年数　：　平成27年</li>
-                                <li>階層　：　12階</li>
-                                <li>広さ　：　22.42㎡</li>
-                                <li>ご職業　：　開業医</li>
-                                <li>ご年齢　：　50代</li>
-                            </ul>
-                            <div class="para cpc-1024">
-                                <h4>ご購入・ご売却の経緯</h4>
-                                <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
-                                    トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
-                                    ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                                    。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                        <div class="layer-flex">
+                            <div class="layer-img">
+                                <img src="images/achievment-layer01.jpg" />
+                            </div>
+                            <div class="layer-content">
+                                <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
+                                <ul>
+                                    <li>築年数　：　平成27年</li>
+                                    <li>階層　：　12階</li>
+                                    <li>広さ　：　22.42㎡</li>
+                                    <li>ご職業　：　開業医</li>
+                                    <li>ご年齢　：　50代</li>
+                                </ul>
+                                <div class="para">
+                                    <h4>ご購入・ご売却の経緯</h4>
+                                    <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
+                                        トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
+                                        ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
+                                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="para csp-1024">
-                        <h4>ご購入・ご売却の経緯</h4>
-                        <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
-                            トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
-                            ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                            。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-layer io fade upS">
-                    <div class="layer-head">
-                        <h3>プレサンス丸の内城雅</h3>
-                    </div>
-                    <div class="layer-flex">
-                        <div class="layer-img">
-                            <img src="images/achievment-layer01.jpg" />
+                    <div class="achievement-layer-wrap">
+                        <div class="layer-head">
+                            <h3>プレサンス丸の内城雅</h3>
                         </div>
-                        <div class="layer-content">
-                            <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
-                            <ul>
-                                <li>築年数　：　平成27年</li>
-                                <li>階層　：　12階</li>
-                                <li>広さ　：　22.42㎡</li>
-                                <li>ご職業　：　開業医</li>
-                                <li>ご年齢　：　50代</li>
-                            </ul>
-                            <div class="para cpc-1024">
-                                <h4>ご購入・ご売却の経緯</h4>
-                                <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
-                                    トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
-                                    ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                                    。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                        <div class="layer-flex">
+                            <div class="layer-img">
+                                <img src="images/achievment-layer01.jpg" />
+                            </div>
+                            <div class="layer-content">
+                                <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
+                                <ul>
+                                    <li>築年数　：　平成27年</li>
+                                    <li>階層　：　12階</li>
+                                    <li>広さ　：　22.42㎡</li>
+                                    <li>ご職業　：　開業医</li>
+                                    <li>ご年齢　：　50代</li>
+                                </ul>
+                                <div class="para">
+                                    <h4>ご購入・ご売却の経緯</h4>
+                                    <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
+                                        トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
+                                        ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
+                                        。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="para csp-1024">
-                        <h4>ご購入・ご売却の経緯</h4>
-                        <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
-                            トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
-                            ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                            。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
-                    </div>
-                </div>
-                <div class="achievment-layer io fade upS">
-                    <div class="layer-head">
-                        <h3>プレサンス丸の内城雅</h3>
-                    </div>
-                    <div class="layer-flex">
-                        <div class="layer-img">
-                            <img src="images/achievment-layer01.jpg" />
-                        </div>
-                        <div class="layer-content">
-                            <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
-                            <ul>
-                                <li>築年数　：　平成27年</li>
-                                <li>階層　：　12階</li>
-                                <li>広さ　：　22.42㎡</li>
-                                <li>ご職業　：　開業医</li>
-                                <li>ご年齢　：　50代</li>
-                            </ul>
-                            <div class="para cpc-1024">
-                                <h4>ご購入・ご売却の経緯</h4>
-                                <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
-                                    トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
-                                    ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                                    。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="para csp-1024">
-                        <h4>ご購入・ご売却の経緯</h4>
-                        <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
-                            トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
-                            ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
-                            。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
                     </div>
                 </div>
                 <div class="achievment-pagination">
@@ -235,13 +182,13 @@
         <section class="howto-contact-section">
             <div class="custom_container">
                 <div class="howto-contact-sub">
-                    <div class="underline_heading io fade upS">
+                    <div class="underline_heading">
                         <h2><span>ご相談や詳しい内容につきましてはこ</span> <br class="csp" /> <span>ちらからお問い合わせください！</span></h2>
                     </div>
                     <div class="howto-contact-content">
                         <div class="custom_row">
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx io fade upS">
+                                <div class="content-bx">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-call-blue.png" />
@@ -256,7 +203,7 @@
                                 </div>
                             </div>
                             <div class="custom_col_6 columnn">
-                                <div class="content-bx io fade upS">
+                                <div class="content-bx">
                                     <div class="head">
                                         <div class="icon">
                                             <img src="images/icon-mail-blue.png" />
@@ -275,6 +222,7 @@
                 </div>
             </div>
         </section>
+</div>
         <footer class="site_footer">
             <div class="footer_text">
                 <div class="custom_container">
